--- a/src/components/BackgroundTopPhoto/backgroundTopPhoto.scss
+++ b/src/components/BackgroundTopPhoto/backgroundTopPhoto.scss
@@ -3,7 +3,6 @@
 .backgroundPhoto--container {
   position: relative;
   height: auto;
-  @include view-width-100;
 
   img {
     position: relative;
