--- a/src/components/HomeFirstSection/homeFirstSection.scss
+++ b/src/components/HomeFirstSection/homeFirstSection.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: clip;
 
   padding: 52px 16px 0;
   margin-bottom: 48px;
